<?xml version="1.0"?>
<package format="2">
    <name>ros_test</name>
    <version>0.0.0</version>
    <description>My first ROS1 package</description>
    <maintainer email="s21c1036hn@s.chibakoudai.jp">Shuji KAWAHARA</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <export>
    </export>
</package>
